--- a/src/components/Shoutouts/Sidebar/Sidebar.css
+++ b/src/components/Shoutouts/Sidebar/Sidebar.css
@@ -2,10 +2,23 @@
 {
   width: 30%;
   min-width: 300px;
-  padding: 20px 10px;
+  padding: 70px 10px 20px 10px;
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
+  border-left: 0.5px solid #f2f2f2;
+}
+
+.main .sidebar .megaphone-icon
+{
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  height: 38px;
+  width: 38px;
+  border: 1px solid black;
+  border-radius: 5px;
 }
 
 .main .sidebar h1
