--- a/src/components/Shoutouts/Shoutouts.css
+++ b/src/components/Shoutouts/Shoutouts.css
@@ -1,10 +1,11 @@
 .main
 {
-  height: 100%;
+  height: calc(100vh - 130px);
+  min-height: calc(100vh - 130px);
   width: 100%;
   display: flex;
   flex-direction: row;
-  flex: 1;
+  overflow: scroll;
 }
 
 .main .shout-outs
