--- a/src/components/Shoutouts/Sidebar/Sidebar.css
+++ b/src/components/Shoutouts/Sidebar/Sidebar.css
@@ -1,16 +1,25 @@
-.main .sidebar
+.sidebar-wrapper
 {
-  width: 30%;
-  min-width: 300px;
+  position: absolute;
+  right: 0px;
+  height: calc(100vh - 130px);
+  z-index: 999;
+}
+
+.sidebar
+{
+  width: 350px;
+  height: -webkit-fill-available;
   padding: 70px 10px 20px 10px;
   position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background: #f80046;
   border-left: 0.5px solid #f2f2f2;
 }
 
-.main .sidebar .megaphone-icon
+.sidebar .megaphone-icon
 {
   position: absolute;
   top: 10px;
@@ -21,7 +30,7 @@
   border-radius: 5px;
 }
 
-.main .sidebar h1
+.sidebar h1
 {
   color: #f2f2f2;
   font-size: 18px;
@@ -30,14 +39,14 @@
   margin-top: 0;
 }
 
-.main .sidebar .form
+.sidebar .form
 {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.main .sidebar .form .form-item
+.sidebar .form .form-item
 {
   width: 100%;
   margin-bottom: 10px;
@@ -45,12 +54,12 @@
   padding: 5px;
 }
 
-.main .sidebar .form .form-item.message
+.sidebar .form .form-item.message
 {
   height: 100px;
 }
 
-.main .sidebar .form .form-item.submit
+.sidebar .form .form-item.submit
 {
   width: auto;
   height: 38px;
@@ -64,12 +73,12 @@
   border: 1px solid rgba(0,0,0,.2);
 }
 
-.main .sidebar .form .form-item.submit:hover
+.sidebar .form .form-item.submit:hover
 {
   cursor: pointer;
 }
 
-.main .sidebar .form .form-item.submit:focus
+.sidebar .form .form-item.submit:focus
 {
   outline: none;
 }
