Add padding to shoutout card

--- a/src/components/Shoutouts/Shoutouts.css
+++ b/src/components/Shoutouts/Shoutouts.css
@@ -16,7 +16,7 @@
   flex-wrap: wrap;
   position: relative;
   width: 100%;
-  padding: 20px 0;
+  padding: 20px 60px 20px 0;
 }
 
 .main .shout-outs .megaphone-icon
