--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,8 @@ html
 {
   display: flex;
   flex-direction: column;
-  min-height: 100%;
+  min-height: 100vh;
+  height: 100%;
 }
 
 .page-wrap:after {
